// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonLink renders when given props 1`] = `
<a
  className="repository--button extraClass"
  download={null}
  href="/path/to/url"
  target="_blank"
>
  Link Text
</a>
`;

exports[`ButtonLink renders with disabled prop 1`] = `
<a
  className="repository--button  disabled"
>
  Link Text
</a>
`;

exports[`ButtonLink renders with no extra classes 1`] = `
<a
  className="repository--button "
  download={null}
  href="/path/to/url"
  target="_blank"
>
  Link Text
</a>
`;
